Fixed z-index in the logos

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -155,7 +155,7 @@ header.default.tiny {
   padding: 15px;
   color: #fff;
   display: none;
-  z-index: 300px;
+  z-index: 300;
   
   p {
     margin: 10px 0 0 0;
